tooling/nargo_cli/tests/snapshots/execution_failure/shl_overflow_u64/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: attempt to bit-shift with overflow
  ┌─ src/main.nr:5:19
  │
5 │     let _result = x << 100;
  │                   -------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:5:19

Aborting due to 1 previous error
