tooling/nargo_cli/tests/snapshots/execution_failure/shl_overflow_u64/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to bit-shift with overflow
  ┌─ src/main.nr:5:19
  │
5 │     let _result = x << 100;
  │                   --------
  │
  = Call stack:
    1. src/main.nr:5:19

Failed assertion
